src/parser.output
Grammar

    0 $accept: ROOT_TREE $end

    1 ROOT_TREE: GlobalDef

    2 GlobalDef: GlobalDec
    3          | GlobalDef GlobalDec

    4 GlobalDec: Declaration
    5          | FunctionDefinition

    6 Declaration: TYPE IDENTIFIER SEMI
    7            | TYPE LIST IDENTIFIER SEMI

    8 Definition: IDENTIFIER ATT Expression
    9           | IDENTIFIER ATT MIN NUM_CONST
   10           | IDENTIFIER ATT MIN IDENTIFIER

   11 FunctionDefinition: FunctionHead LP FunctionArgs RP CompStatement
   12                   | FunctionHead LP RP CompStatement
   13                   | FunctionHead LP error RP CompStatement

   14 FunctionArgs: TYPE IDENTIFIER
   15             | TYPE IDENTIFIER COM TYPE IDENTIFIER ParamList
   16             | TYPE LIST IDENTIFIER
   17             | TYPE LIST IDENTIFIER COM TYPE LIST IDENTIFIER ParamList
   18             | TYPE IDENTIFIER COM TYPE LIST IDENTIFIER ParamList
   19             | TYPE LIST IDENTIFIER COM TYPE IDENTIFIER ParamList

   20 FunctionHead: TYPE IDENTIFIER
   21             | TYPE LIST IDENTIFIER

   22 ParamList: ε
   23          | COM TYPE IDENTIFIER ParamList
   24          | COM TYPE LIST IDENTIFIER ParamList

   25 Statement: CompStatement
   26          | JmpStatement
   27          | SelStatement
   28          | ItStatement
   29          | ExpStatement

   30 CompStatement: LCB StatementExp

   31 StatementExp: RCB
   32             | Declaration StatementExp
   33             | Definition StatementExp
   34             | Statement StatementExp
   35             | error RCB

   36 SelStatement: IfHead LP Expression RP Statement
   37             | IfHead LP Expression RP Definition
   38             | IfHead LP Expression RP Statement ElseHead Statement
   39             | IfHead LP error RP Statement
   40             | error ElseHead Statement

   41 IfHead: IF

   42 ElseHead: ELSE

   43 ExpStatement: SEMI
   44             | Expression SEMI

   45 JmpStatement: RET ExpStatement

   46 ItStatement: ForHead LP ExpAtt SEMI ExpAtt SEMI ExpAtt RP Statement
   47            | ForHead LP ExpAtt SEMI error RP Statement
   48            | ForHead LP error RP Statement
   49            | ForHead LP ExpAtt SEMI ExpAtt SEMI error RP Statement

   50 ForHead: FOR

   51 ExpAtt: Expression
   52       | Definition
   53       | error SEMI
   54       | error COM

   55 Expression: LogicalOrExpression

   56 LogicalOrExpression: LogicalAndExpression
   57                    | LogicalOrExpression OR LogicalAndExpression

   58 LogicalAndExpression: EqualityExpression
   59                     | LogicalAndExpression AND EqualityExpression

   60 EqualityExpression: RelationalExpression
   61                   | EqualityExpression COMP_EQ RelationalExpression

   62 RelationalExpression: AdditiveExpression
   63                     | RelationalExpression LEQ AdditiveExpression
   64                     | RelationalExpression GEQ AdditiveExpression
   65                     | RelationalExpression LT AdditiveExpression
   66                     | RelationalExpression GT AdditiveExpression
   67                     | RelationalExpression DIF AdditiveExpression
   68                     | RelationalExpression MAP AdditiveExpression
   69                     | RelationalExpression FIL AdditiveExpression

   70 AdditiveExpression: MultiplicativeExpression
   71                   | AdditiveExpression PLUS MultiplicativeExpression
   72                   | AdditiveExpression MIN MultiplicativeExpression
   73                   | AdditiveExpression TWD MultiplicativeExpression

   74 MultiplicativeExpression: UnaryExpression
   75                         | MultiplicativeExpression MUL UnaryExpression
   76                         | MultiplicativeExpression DIV UnaryExpression

   77 UnaryExpression: PrimaryExpression
   78                | TNR UnaryExpression
   79                | HD UnaryExpression
   80                | TR UnaryExpression

   81 PrimaryExpression: IDENTIFIER
   82                  | NUM_CONST
   83                  | LP Expression RP
   84                  | LP error RP
   85                  | IDENTIFIER LP Params RP
   86                  | IDENTIFIER LP RP
   87                  | WRITE LP STR RP
   88                  | WRITE LP Expression RP
   89                  | READ LP IDENTIFIER RP
   90                  | WRITE_LN LP STR RP
   91                  | WRITE_LN LP Expression RP
   92                  | NIL

   93 Params: Expression
   94       | Params COM Expression


Terminals, with rules where they appear

    $end (0) 0
    error (256) 13 35 39 40 47 48 49 53 54 84
    TYPE <string> (258) 6 7 14 15 16 17 18 19 20 21 23 24
    IDENTIFIER <string> (259) 6 7 8 9 10 14 15 16 17 18 19 20 21 23 24 81 85 86 89
    LIST <string> (260) 7 16 17 18 19 21 24
    LP (261) 11 12 13 36 37 38 39 46 47 48 49 83 84 85 86 87 88 89 90 91
    SEMI <string> (262) 6 7 43 44 46 47 49 53
    COM (263) 15 17 18 19 23 24 54 94
    RCB (264) 31 35
    LCB (265) 30
    TWD (266) 73
    PLUS (267) 71
    MIN (268) 9 10 72
    MUL (269) 75
    LT (270) 65
    GT (271) 66
    LEQ (272) 63
    GEQ (273) 64
    DIF (274) 67
    MAP (275) 68
    FIL (276) 69
    DIV (277) 76
    TR (278) 80
    TNR (279) 78
    HD (280) 79
    ATT (281) 8 9 10
    COMP_EQ (282) 61
    AND (283) 59
    OR (284) 57
    RP (285) 11 12 13 36 37 38 39 46 47 48 49 83 84 85 86 87 88 89 90 91
    NUM_CONST <num> (286) 9 82
    NIL (287) 92
    STR <string> (288) 87 90
    WRITE (289) 87 88
    READ (290) 89
    WRITE_LN (291) 90 91
    IF (292) 41
    ELSE (293) 42
    FOR (294) 50
    RET (295) 45


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    ROOT_TREE <tree> (42)
        on left: 1
        on right: 0
    GlobalDef <state> (43)
        on left: 2 3
        on right: 1 3
    GlobalDec <state> (44)
        on left: 4 5
        on right: 2 3
    Declaration <state> (45)
        on left: 6 7
        on right: 4 32
    Definition <state> (46)
        on left: 8 9 10
        on right: 33 37 52
    FunctionDefinition <state> (47)
        on left: 11 12 13
        on right: 5
    FunctionArgs <state> (48)
        on left: 14 15 16 17 18 19
        on right: 11
    FunctionHead <state> (49)
        on left: 20 21
        on right: 11 12 13
    ParamList <state> (50)
        on left: 22 23 24
        on right: 15 17 18 19 23 24
    Statement <state> (51)
        on left: 25 26 27 28 29
        on right: 34 36 38 39 40 46 47 48 49
    CompStatement <state> (52)
        on left: 30
        on right: 11 12 13 25
    StatementExp <state> (53)
        on left: 31 32 33 34 35
        on right: 30 32 33 34
    SelStatement <state> (54)
        on left: 36 37 38 39 40
        on right: 27
    IfHead <state> (55)
        on left: 41
        on right: 36 37 38 39
    ElseHead <state> (56)
        on left: 42
        on right: 38 40
    ExpStatement <state> (57)
        on left: 43 44
        on right: 29 45
    JmpStatement <state> (58)
        on left: 45
        on right: 26
    ItStatement <state> (59)
        on left: 46 47 48 49
        on right: 28
    ForHead <state> (60)
        on left: 50
        on right: 46 47 48 49
    ExpAtt <state> (61)
        on left: 51 52 53 54
        on right: 46 47 49
    Expression <state> (62)
        on left: 55
        on right: 8 36 37 38 44 51 83 88 91 93 94
    LogicalOrExpression <state> (63)
        on left: 56 57
        on right: 55 57
    LogicalAndExpression <state> (64)
        on left: 58 59
        on right: 56 57 59
    EqualityExpression <state> (65)
        on left: 60 61
        on right: 58 59 61
    RelationalExpression <state> (66)
        on left: 62 63 64 65 66 67 68 69
        on right: 60 61 63 64 65 66 67 68 69
    AdditiveExpression <state> (67)
        on left: 70 71 72 73
        on right: 62 63 64 65 66 67 68 69 71 72 73
    MultiplicativeExpression <state> (68)
        on left: 74 75 76
        on right: 70 71 72 73 75 76
    UnaryExpression <state> (69)
        on left: 77 78 79 80
        on right: 74 75 76 78 79 80
    PrimaryExpression <state> (70)
        on left: 81 82 83 84 85 86 87 88 89 90 91 92
        on right: 77
    Params <state> (71)
        on left: 93 94
        on right: 85 94


State 0

    0 $accept: • ROOT_TREE $end

    TYPE  shift, and go to state 1

    ROOT_TREE           go to state 2
    GlobalDef           go to state 3
    GlobalDec           go to state 4
    Declaration         go to state 5
    FunctionDefinition  go to state 6
    FunctionHead        go to state 7


State 1

    6 Declaration: TYPE • IDENTIFIER SEMI
    7            | TYPE • LIST IDENTIFIER SEMI
   20 FunctionHead: TYPE • IDENTIFIER
   21             | TYPE • LIST IDENTIFIER

    IDENTIFIER  shift, and go to state 8
    LIST        shift, and go to state 9


State 2

    0 $accept: ROOT_TREE • $end

    $end  shift, and go to state 10


State 3

    1 ROOT_TREE: GlobalDef •
    3 GlobalDef: GlobalDef • GlobalDec

    TYPE  shift, and go to state 1

    $end  reduce using rule 1 (ROOT_TREE)

    GlobalDec           go to state 11
    Declaration         go to state 5
    FunctionDefinition  go to state 6
    FunctionHead        go to state 7


State 4

    2 GlobalDef: GlobalDec •

    $end  reduce using rule 2 (GlobalDef)
    TYPE  reduce using rule 2 (GlobalDef)


State 5

    4 GlobalDec: Declaration •

    $end  reduce using rule 4 (GlobalDec)
    TYPE  reduce using rule 4 (GlobalDec)


State 6

    5 GlobalDec: FunctionDefinition •

    $end  reduce using rule 5 (GlobalDec)
    TYPE  reduce using rule 5 (GlobalDec)


State 7

   11 FunctionDefinition: FunctionHead • LP FunctionArgs RP CompStatement
   12                   | FunctionHead • LP RP CompStatement
   13                   | FunctionHead • LP error RP CompStatement

    LP  shift, and go to state 12


State 8

    6 Declaration: TYPE IDENTIFIER • SEMI
   20 FunctionHead: TYPE IDENTIFIER •

    SEMI  shift, and go to state 13

    LP  reduce using rule 20 (FunctionHead)


State 9

    7 Declaration: TYPE LIST • IDENTIFIER SEMI
   21 FunctionHead: TYPE LIST • IDENTIFIER

    IDENTIFIER  shift, and go to state 14


State 10

    0 $accept: ROOT_TREE $end •

    $default  accept


State 11

    3 GlobalDef: GlobalDef GlobalDec •

    $end  reduce using rule 3 (GlobalDef)
    TYPE  reduce using rule 3 (GlobalDef)


State 12

   11 FunctionDefinition: FunctionHead LP • FunctionArgs RP CompStatement
   12                   | FunctionHead LP • RP CompStatement
   13                   | FunctionHead LP • error RP CompStatement

    error  shift, and go to state 15
    TYPE   shift, and go to state 16
    RP     shift, and go to state 17

    FunctionArgs  go to state 18


State 13

    6 Declaration: TYPE IDENTIFIER SEMI •

    $end  reduce using rule 6 (Declaration)
    TYPE  reduce using rule 6 (Declaration)


State 14

    7 Declaration: TYPE LIST IDENTIFIER • SEMI
   21 FunctionHead: TYPE LIST IDENTIFIER •

    SEMI  shift, and go to state 19

    LP  reduce using rule 21 (FunctionHead)


State 15

   13 FunctionDefinition: FunctionHead LP error • RP CompStatement

    RP  shift, and go to state 20


State 16

   14 FunctionArgs: TYPE • IDENTIFIER
   15             | TYPE • IDENTIFIER COM TYPE IDENTIFIER ParamList
   16             | TYPE • LIST IDENTIFIER
   17             | TYPE • LIST IDENTIFIER COM TYPE LIST IDENTIFIER ParamList
   18             | TYPE • IDENTIFIER COM TYPE LIST IDENTIFIER ParamList
   19             | TYPE • LIST IDENTIFIER COM TYPE IDENTIFIER ParamList

    IDENTIFIER  shift, and go to state 21
    LIST        shift, and go to state 22


State 17

   12 FunctionDefinition: FunctionHead LP RP • CompStatement

    LCB  shift, and go to state 23

    CompStatement  go to state 24


State 18

   11 FunctionDefinition: FunctionHead LP FunctionArgs • RP CompStatement

    RP  shift, and go to state 25


State 19

    7 Declaration: TYPE LIST IDENTIFIER SEMI •

    $end  reduce using rule 7 (Declaration)
    TYPE  reduce using rule 7 (Declaration)


State 20

   13 FunctionDefinition: FunctionHead LP error RP • CompStatement

    LCB  shift, and go to state 23

    CompStatement  go to state 26


State 21

   14 FunctionArgs: TYPE IDENTIFIER •
   15             | TYPE IDENTIFIER • COM TYPE IDENTIFIER ParamList
   18             | TYPE IDENTIFIER • COM TYPE LIST IDENTIFIER ParamList

    COM  shift, and go to state 27

    RP  reduce using rule 14 (FunctionArgs)


State 22

   16 FunctionArgs: TYPE LIST • IDENTIFIER
   17             | TYPE LIST • IDENTIFIER COM TYPE LIST IDENTIFIER ParamList
   19             | TYPE LIST • IDENTIFIER COM TYPE IDENTIFIER ParamList

    IDENTIFIER  shift, and go to state 28


State 23

   30 CompStatement: LCB • StatementExp

    error       shift, and go to state 29
    TYPE        shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    LP          shift, and go to state 32
    SEMI        shift, and go to state 33
    RCB         shift, and go to state 34
    LCB         shift, and go to state 194
    TR          shift, and go to state 35
    TNR         shift, and go to state 36
    HD          shift, and go to state 37
    NUM_CONST   shift, and go to state 38
    NIL         shift, and go to state 39
    WRITE       shift, and go to state 40
    READ        shift, and go to state 41
    WRITE_LN    shift, and go to state 42
    IF          shift, and go to state 43
    FOR         shift, and go to state 44
    RET         shift, and go to state 45

    Declaration               go to state 46
    Definition                go to state 47
    Statement                 go to state 48
    CompStatement             go to state 49
    StatementExp              go to state 50
    SelStatement              go to state 51
    IfHead                    go to state 52
    ExpStatement              go to state 53
    JmpStatement              go to state 54
    ItStatement               go to state 55
    ForHead                   go to state 56
    Expression                go to state 57
    LogicalOrExpression       go to state 58
    LogicalAndExpression      go to state 59
    EqualityExpression        go to state 60
    RelationalExpression      go to state 61
    AdditiveExpression        go to state 62
    MultiplicativeExpression  go to state 63
    UnaryExpression           go to state 64
    PrimaryExpression         go to state 65


State 24

   12 FunctionDefinition: FunctionHead LP RP CompStatement •

    $end  reduce using rule 12 (FunctionDefinition)
    TYPE  reduce using rule 12 (FunctionDefinition)


State 25

   11 FunctionDefinition: FunctionHead LP FunctionArgs RP • CompStatement

    LCB  shift, and go to state 23

    CompStatement  go to state 66


State 26

   13 FunctionDefinition: FunctionHead LP error RP CompStatement •

    $end  reduce using rule 13 (FunctionDefinition)
    TYPE  reduce using rule 13 (FunctionDefinition)


State 27

   15 FunctionArgs: TYPE IDENTIFIER COM • TYPE IDENTIFIER ParamList
   18             | TYPE IDENTIFIER COM • TYPE LIST IDENTIFIER ParamList

    TYPE  shift, and go to state 67


State 28

   16 FunctionArgs: TYPE LIST IDENTIFIER •
   17             | TYPE LIST IDENTIFIER • COM TYPE LIST IDENTIFIER ParamList
   19             | TYPE LIST IDENTIFIER • COM TYPE IDENTIFIER ParamList

    COM  shift, and go to state 68

    RP  reduce using rule 16 (FunctionArgs)


State 29

   35 StatementExp: error • RCB
   40 SelStatement: error • ElseHead Statement

    RCB   shift, and go to state 69
    ELSE  shift, and go to state 70

    ElseHead  go to state 71


State 30

    6 Declaration: TYPE • IDENTIFIER SEMI
    7            | TYPE • LIST IDENTIFIER SEMI

    IDENTIFIER  shift, and go to state 72
    LIST        shift, and go to state 73


State 31

    8 Definition: IDENTIFIER • ATT Expression
    9           | IDENTIFIER • ATT MIN NUM_CONST
   10           | IDENTIFIER • ATT MIN IDENTIFIER
   81 PrimaryExpression: IDENTIFIER •
   85                  | IDENTIFIER • LP Params RP
   86                  | IDENTIFIER • LP RP

    LP   shift, and go to state 74
    ATT  shift, and go to state 75

    SEMI     reduce using rule 81 (PrimaryExpression)
    TWD      reduce using rule 81 (PrimaryExpression)
    PLUS     reduce using rule 81 (PrimaryExpression)
    MIN      reduce using rule 81 (PrimaryExpression)
    MUL      reduce using rule 81 (PrimaryExpression)
    LT       reduce using rule 81 (PrimaryExpression)
    GT       reduce using rule 81 (PrimaryExpression)
    LEQ      reduce using rule 81 (PrimaryExpression)
    GEQ      reduce using rule 81 (PrimaryExpression)
    DIF      reduce using rule 81 (PrimaryExpression)
    MAP      reduce using rule 81 (PrimaryExpression)
    FIL      reduce using rule 81 (PrimaryExpression)
    DIV      reduce using rule 81 (PrimaryExpression)
    COMP_EQ  reduce using rule 81 (PrimaryExpression)
    AND      reduce using rule 81 (PrimaryExpression)
    OR       reduce using rule 81 (PrimaryExpression)


State 32

   83 PrimaryExpression: LP • Expression RP
   84                  | LP • error RP

    error       shift, and go to state 76
    IDENTIFIER  shift, and go to state 77
    LP          shift, and go to state 195
    TR          shift, and go to state 196
    TNR         shift, and go to state 197
    HD          shift, and go to state 198
    NUM_CONST   shift, and go to state 199
    NIL         shift, and go to state 200
    WRITE       shift, and go to state 201
    READ        shift, and go to state 202
    WRITE_LN    shift, and go to state 203

    Expression                go to state 78
    LogicalOrExpression       go to state 204
    LogicalAndExpression      go to state 205
    EqualityExpression        go to state 206
    RelationalExpression      go to state 207
    AdditiveExpression        go to state 208
    MultiplicativeExpression  go to state 209
    UnaryExpression           go to state 210
    PrimaryExpression         go to state 211


State 33

   43 ExpStatement: SEMI •

    error       reduce using rule 43 (ExpStatement)
    TYPE        reduce using rule 43 (ExpStatement)
    IDENTIFIER  reduce using rule 43 (ExpStatement)
    LP          reduce using rule 43 (ExpStatement)
    SEMI        reduce using rule 43 (ExpStatement)
    RCB         reduce using rule 43 (ExpStatement)
    LCB         reduce using rule 43 (ExpStatement)
    TR          reduce using rule 43 (ExpStatement)
    TNR         reduce using rule 43 (ExpStatement)
    HD          reduce using rule 43 (ExpStatement)
    NUM_CONST   reduce using rule 43 (ExpStatement)
    NIL         reduce using rule 43 (ExpStatement)
    WRITE       reduce using rule 43 (ExpStatement)
    READ        reduce using rule 43 (ExpStatement)
    WRITE_LN    reduce using rule 43 (ExpStatement)
    IF          reduce using rule 43 (ExpStatement)
    FOR         reduce using rule 43 (ExpStatement)
    RET         reduce using rule 43 (ExpStatement)


State 34

   31 StatementExp: RCB •

    $end  reduce using rule 31 (StatementExp)
    TYPE  reduce using rule 31 (StatementExp)


State 35

   80 UnaryExpression: TR • UnaryExpression

    IDENTIFIER  shift, and go to state 212
    LP          shift, and go to state 32
    TR          shift, and go to state 35
    TNR         shift, and go to state 36
    HD          shift, and go to state 37
    NUM_CONST   shift, and go to state 38
    NIL         shift, and go to state 39
    WRITE       shift, and go to state 40
    READ        shift, and go to state 41
    WRITE_LN    shift, and go to state 42

    UnaryExpression    go to state 79
    PrimaryExpression  go to state 65


State 36

   78 UnaryExpression: TNR • UnaryExpression

    IDENTIFIER  shift, and go to state 212
    LP          shift, and go to state 32
    TR          shift, and go to state 35
    TNR         shift, and go to state 36
    HD          shift, and go to state 37
    NUM_CONST   shift, and go to state 38
    NIL         shift, and go to state 39
    WRITE       shift, and go to state 40
    READ        shift, and go to state 41
    WRITE_LN    shift, and go to state 42

    UnaryExpression    go to state 80
    PrimaryExpression  go to state 65


State 37

   79 UnaryExpression: HD • UnaryExpression

    IDENTIFIER  shift, and go to state 212
    LP          shift, and go to state 32
    TR          shift, and go to state 35
    TNR         shift, and go to state 36
    HD          shift, and go to state 37
    NUM_CONST   shift, and go to state 38
    NIL         shift, and go to state 39
    WRITE       shift, and go to state 40
    READ        shift, and go to state 41
    WRITE_LN    shift, and go to state 42

    UnaryExpression    go to state 81
    PrimaryExpression  go to state 65


State 38

   82 PrimaryExpression: NUM_CONST •

    SEMI     reduce using rule 82 (PrimaryExpression)
    TWD      reduce using rule 82 (PrimaryExpression)
    PLUS     reduce using rule 82 (PrimaryExpression)
    MIN      reduce using rule 82 (PrimaryExpression)
    MUL      reduce using rule 82 (PrimaryExpression)
    LT       reduce using rule 82 (PrimaryExpression)
    GT       reduce using rule 82 (PrimaryExpression)
    LEQ      reduce using rule 82 (PrimaryExpression)
    GEQ      reduce using rule 82 (PrimaryExpression)
    DIF      reduce using rule 82 (PrimaryExpression)
    MAP      reduce using rule 82 (PrimaryExpression)
    FIL      reduce using rule 82 (PrimaryExpression)
    DIV      reduce using rule 82 (PrimaryExpression)
    COMP_EQ  reduce using rule 82 (PrimaryExpression)
    AND      reduce using rule 82 (PrimaryExpression)
    OR       reduce using rule 82 (PrimaryExpression)


State 39

   92 PrimaryExpression: NIL •

    SEMI     reduce using rule 92 (PrimaryExpression)
    TWD      reduce using rule 92 (PrimaryExpression)
    PLUS     reduce using rule 92 (PrimaryExpression)
    MIN      reduce using rule 92 (PrimaryExpression)
    MUL      reduce using rule 92 (PrimaryExpression)
    LT       reduce using rule 92 (PrimaryExpression)
    GT       reduce using rule 92 (PrimaryExpression)
    LEQ      reduce using rule 92 (PrimaryExpression)
    GEQ      reduce using rule 92 (PrimaryExpression)
    DIF      reduce using rule 92 (PrimaryExpression)
    MAP      reduce using rule 92 (PrimaryExpression)
    FIL      reduce using rule 92 (PrimaryExpression)
    DIV      reduce using rule 92 (PrimaryExpression)
    COMP_EQ  reduce using rule 92 (PrimaryExpression)
    AND      reduce using rule 92 (PrimaryExpression)
    OR       reduce using rule 92 (PrimaryExpression)


State 40

   87 PrimaryExpression: WRITE • LP STR RP
   88                  | WRITE • LP Expression RP

    LP  shift, and go to state 82


State 41

   89 PrimaryExpression: READ • LP IDENTIFIER RP

    LP  shift, and go to state 83


State 42

   90 PrimaryExpression: WRITE_LN • LP STR RP
   91                  | WRITE_LN • LP Expression RP

    LP  shift, and go to state 84


State 43

   41 IfHead: IF •

    LP  reduce using rule 41 (IfHead)


State 44

   50 ForHead: FOR •

    LP  reduce using rule 50 (ForHead)


State 45

   45 JmpStatement: RET • ExpStatement

    IDENTIFIER  shift, and go to state 212
    LP          shift, and go to state 32
    SEMI        shift, and go to state 33
    TR          shift, and go to state 35
    TNR         shift, and go to state 36
    HD          shift, and go to state 37
    NUM_CONST   shift, and go to state 38
    NIL         shift, and go to state 39
    WRITE       shift, and go to state 40
    READ        shift, and go to state 41
    WRITE_LN    shift, and go to state 42

    ExpStatement              go to state 85
    Expression                go to state 57
    LogicalOrExpression       go to state 58
    LogicalAndExpression      go to state 59
    EqualityExpression        go to state 60
    RelationalExpression      go to state 61
    AdditiveExpression        go to state 62
    MultiplicativeExpression  go to state 63
    UnaryExpression           go to state 64
    PrimaryExpression         go to state 65


State 46

   32 StatementExp: Declaration • StatementExp

    error       shift, and go to state 29
    TYPE        shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    LP          shift, and go to state 32
    SEMI        shift, and go to state 33
    RCB         shift, and go to state 34
    LCB         shift, and go to state 194
    TR          shift, and go to state 35
    TNR         shift, and go to state 36
    HD          shift, and go to state 37
    NUM_CONST   shift, and go to state 38
    NIL         shift, and go to state 39
    WRITE       shift, and go to state 40
    READ        shift, and go to state 41
    WRITE_LN    shift, and go to state 42
    IF          shift, and go to state 43
    FOR         shift, and go to state 44
    RET         shift, and go to state 45

    Declaration               go to state 46
    Definition                go to state 47
    Statement                 go to state 48
    CompStatement             go to state 49
    StatementExp              go to state 86
    SelStatement              go to state 51
    IfHead                    go to state 52
    ExpStatement              go to state 53
    JmpStatement              go to state 54
    ItStatement               go to state 55
    ForHead                   go to state 56
    Expression                go to state 57
    LogicalOrExpression       go to state 58
    LogicalAndExpression      go to state 59
    EqualityExpression        go to state 60
    RelationalExpression      go to state 61
    AdditiveExpression        go to state 62
    MultiplicativeExpression  go to state 63
    UnaryExpression           go to state 64
    PrimaryExpression         go to state 65


State 47

   33 StatementExp: Definition • StatementExp

    error       shift, and go to state 29
    TYPE        shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    LP          shift, and go to state 32
    SEMI        shift, and go to state 33
    RCB         shift, and go to state 34
    LCB         shift, and go to state 194
    TR          shift, and go to state 35
    TNR         shift, and go to state 36
    HD          shift, and go to state 37
    NUM_CONST   shift, and go to state 38
    NIL         shift, and go to state 39
    WRITE       shift, and go to state 40
    READ        shift, and go to state 41
    WRITE_LN    shift, and go to state 42
    IF          shift, and go to state 43
    FOR         shift, and go to state 44
    RET         shift, and go to state 45

    Declaration               go to state 46
    Definition                go to state 47
    Statement                 go to state 48
    CompStatement             go to state 49
    StatementExp              go to state 87
    SelStatement              go to state 51
    IfHead                    go to state 52
    ExpStatement              go to state 53
    JmpStatement              go to state 54
    ItStatement               go to state 55
    ForHead                   go to state 56
    Expression                go to state 57
    LogicalOrExpression       go to state 58
    LogicalAndExpression      go to state 59
    EqualityExpression        go to state 60
    RelationalExpression      go to state 61
    AdditiveExpression        go to state 62
    MultiplicativeExpression  go to state 63
    UnaryExpression           go to state 64
    PrimaryExpression         go to state 65


State 48

   34 StatementExp: Statement • StatementExp

    error       shift, and go to state 29
    TYPE        shift, and go to state 30
    IDENTIFIER  shift, and go to state 31
    LP          shift, and go to state 32
    SEMI        shift, and go to state 33
    RCB         shift, and go to state 34
    LCB         shift, and go to state 194
    TR          shift, and go to state 35
    TNR         shift, and go to state 36
    HD          shift, and go to state 37
    NUM_CONST   shift, and go to state 38
    NIL         shift, and go to state 39
    WRITE       shift, and go to state 40
    READ        shift, and go to state 41
    WRITE_LN    shift, and go to state 42
    IF          shift, and go to state 43
    FOR         shift, and go to state 44
    RET         shift, and go to state 45

    Declaration               go to state 46
    Definition                go to state 47
    Statement                 go to state 48
    CompStatement             go to state 49
    StatementExp              go to state 88
    SelStatement              go to state 51
    IfHead                    go to state 52
    ExpStatement              go to state 53
    JmpStatement              go to state 54
    ItStatement               go to state 55
    ForHead                   go to state 56
    Expression                go to state 57
    LogicalOrExpression       go to state 58
    LogicalAndExpression      go to state 59
    EqualityExpression        go to state 60
    RelationalExpression      go to state 61
    AdditiveExpression        go to state 62
    MultiplicativeExpression  go to state 63
    UnaryExpression           go to state 64
    PrimaryExpression         go to state 65


State 49

   25 Statement: CompStatement •

    error       reduce using rule 25 (Statement)
    TYPE        reduce using rule 25 (Statement)
    IDENTIFIER  reduce using rule 25 (Statement)
    LP          reduce using rule 25 (Statement)
    SEMI        reduce using rule 25 (Statement)
    RCB         reduce using rule 25 (Statement)
    LCB         reduce using rule 25 (Statement)
    TR          reduce using rule 25 (Statement)
    TNR         reduce using rule 25 (Statement)
    HD          reduce using rule 25 (Statement)
    NUM_CONST   reduce using rule 25 (Statement)
    NIL         reduce using rule 25 (Statement)
    WRITE       reduce using rule 25 (Statement)
    READ        reduce using rule 25 (Statement)
    WRITE_LN    reduce using rule 25 (Statement)
    IF          reduce using rule 25 (Statement)
    FOR         reduce using rule 25 (Statement)
    RET         reduce using rule 25 (Statement)


State 50

   30 CompStatement: LCB StatementExp •

    $end  reduce using rule 30 (CompStatement)
    TYPE  reduce using rule 30 (CompStatement)


State 51

   27 Statement: SelStatement •

    error       reduce using rule 27 (Statement)
    TYPE        reduce using rule 27 (Statement)
    IDENTIFIER  reduce using rule 27 (Statement)
    LP          reduce using rule 27 (Statement)
    SEMI        reduce using rule 27 (Statement)
    RCB         reduce using rule 27 (Statement)
    LCB         reduce using rule 27 (Statement)
    TR          reduce using rule 27 (Statement)
    TNR         reduce using rule 27 (Statement)
    HD          reduce using rule 27 (Statement)
    NUM_CONST   reduce using rule 27 (Statement)
    NIL         reduce using rule 27 (Statement)
    WRITE       reduce using rule 27 (Statement)
    READ        reduce using rule 27 (Statement)
    WRITE_LN    reduce using rule 27 (Statement)
    IF          reduce using rule 27 (Statement)
    FOR         reduce using rule 27 (Statement)
    RET         reduce using rule 27 (Statement)


State 52

   36 SelStatement: IfHead • LP Expression RP Statement
   37             | IfHead • LP Expression RP Definition
   38             | IfHead • LP Expression RP Statement ElseHead Statement
   39             | IfHead • LP error RP Statement

    LP  shift, and go to state 89


State 53

   29 Statement: ExpStatement •

    error       reduce using rule 29 (Statement)
    TYPE        reduce using rule 29 (Statement)
    IDENTIFIER  reduce using rule 29 (Statement)
    LP          reduce using rule 29 (Statement)
    SEMI        reduce using rule 29 (Statement)
    RCB         reduce using rule 29 (Statement)
    LCB         reduce using rule 29 (Statement)
    TR          reduce using rule 29 (Statement)
    TNR         reduce using rule 29 (Statement)
    HD          reduce using rule 29 (Statement)
    NUM_CONST   reduce using rule 29 (Statement)
    NIL         reduce using rule 29 (Statement)
    WRITE       reduce using rule 29 (Statement)
    READ        reduce using rule 29 (Statement)
    WRITE_LN    reduce using rule 29 (Statement)
    IF          reduce using rule 29 (Statement)
    FOR         reduce using rule 29 (Statement)
    RET         reduce using rule 29 (Statement)


State 54

   26 Statement: JmpStatement •

    error       reduce using rule 26 (Statement)
    TYPE        reduce using rule 26 (Statement)
    IDENTIFIER  reduce using rule 26 (Statement)
    LP          reduce using rule 26 (Statement)
    SEMI        reduce using rule 26 (Statement)
    RCB         reduce using rule 26 (Statement)
    LCB         reduce using rule 26 (Statement)
    TR          reduce using rule 26 (Statement)
    TNR         reduce using rule 26 (Statement)
    HD          reduce using rule 26 (Statement)
    NUM_CONST   reduce using rule 26 (Statement)
    NIL         reduce using rule 26 (Statement)
    WRITE       reduce using rule 26 (Statement)
    READ        reduce using rule 26 (Statement)
    WRITE_LN    reduce using rule 26 (Statement)
    IF          reduce using rule 26 (Statement)
    FOR         reduce using rule 26 (Statement)
    RET         reduce using rule 26 (Statement)


State 55

   28 Statement: ItStatement •

    error       reduce using rule 28 (Statement)
    TYPE        reduce using rule 28 (Statement)
    IDENTIFIER  reduce using rule 28 (Statement)
    LP          reduce using rule 28 (Statement)
    SEMI        reduce using rule 28 (Statement)
    RCB         reduce using rule 28 (Statement)
    LCB         reduce using rule 28 (Statement)
    TR          reduce using rule 28 (Statement)
    TNR         reduce using rule 28 (Statement)
    HD          reduce using rule 28 (Statement)
    NUM_CONST   reduce using rule 28 (Statement)
    NIL         reduce using rule 28 (Statement)
    WRITE       reduce using rule 28 (Statement)
    READ        reduce using rule 28 (Statement)
    WRITE_LN    reduce using rule 28 (Statement)
    IF          reduce using rule 28 (Statement)
    FOR         reduce using rule 28 (Statement)
    RET         reduce using rule 28 (Statement)


State 56

   46 ItStatement: ForHead • LP ExpAtt SEMI ExpAtt SEMI ExpAtt RP Statement
   47            | ForHead • LP ExpAtt SEMI error RP Statement
   48            | ForHead • LP error RP Statement
   49            | ForHead • LP ExpAtt SEMI ExpAtt SEMI error RP Statement

    LP  shift, and go to state 90


State 57

   44 ExpStatement: Expression • SEMI

    SEMI  shift, and go to state 91


State 58
